src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-omT-b-wfsAN.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen maximized: true\nborder on\nwant fullscreen: AN"
expression: snapshot
---
initial configure:
size: 1240 × 680, bounds: 1240 × 680, states: []

post-map configures:
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen]
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1240 × 680, bounds: 1240 × 680, states: [Activated]
